--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "test",
-  "version": "0.0.0",
-  "description": "test",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "server",
   "main": "server.js",
   "author": {
-    "name": ""
+    "name": "Shon Qwezon"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
