--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "server",
+  "name": "test",
+  "version": "0.0.0",
+  "description": "TEST",
   "main": "server.js",
   "author": {
-    "name": "Shon Qwezon"
+    "name": ""
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "md5": "^2.2.1",
     "pg": "^8.2.1"
   }
 }
