--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "test",
-  "version": "0.0.0",
-  "description": "TEST",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "server",
   "main": "server.js",
   "author": {
-    "name": ""
+    "name": "Shon Qwezon"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "md5": "^2.2.1",
     "pg": "^8.2.1"
   }
 }
