--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "server",
   "main": "server.js",
   "license": "MIT",
@@ -16,6 +16,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "md5": "^2.2.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pg": "^8.2.1"
   }
 }
