--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "md5": "^2.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
     "socket.io": "^2.3.0"
   }
